Fix some sizing on smaller screens (#65)

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,27 @@
 :root {
-  --padding: 1rem;
-  --gap: 1rem;
-  --topbar-height: 50px;
-  --board-size: 29vw;
-  --engine-card-info-width: 170px;
+  --padding: 1.5vh;
+  --gap: 1.5vh;
+  --topbar-height: 3rem;
+  --engine-card-info-width: calc(
+    var(--engine-card-width) - var(--engine-board-width) -
+      var(--engine-card-movelist-width)
+  );
   --available-height: calc(
     100vh - 2 * var(--padding) - 2 * var(--gap) - var(--topbar-height)
   );
-  --movelist-width: max(150px, calc(var(--board-size) / 3.5));
+  --board-size: min(56vh, 32vw);
+  --movelist-width: max(140px, calc(var(--board-size) / 3.5));
   --board-wrapper-width: calc(var(--board-size) + var(--movelist-width));
   --graph-height: calc(var(--available-height) - var(--board-size));
-
-  --engine-card-height: calc((var(--board-size) - var(--gap)) / 2);
+  --engine-card-height: max(calc((var(--board-size) - var(--gap)) / 2), 220px);
   --engine-board-width: var(--engine-card-height);
-  --engine-card-movelist-width: max(
-    150px,
-    calc(var(--engine-board-width) / 1.9)
-  );
-  --engine-card-width: calc(
-    var(--engine-card-info-width) + var(--engine-board-width) +
-      var(--engine-card-movelist-width)
-  );
+  --engine-card-movelist-width: calc(var(--engine-board-width) / 1.9);
+  --engine-card-width: max(38rem, 470px);
+
+  --font-sm: 0.8rem;
+  --font-md: 0.9rem;
+  --font-lg: 1rem;
+  --font-xl: 1.1rem;
 }
 
 *,
@@ -46,35 +47,6 @@
   border-radius: 3px;
 }
 
-@media (max-width: 1920px) {
-  :root {
-    --engine-board-padding: calc((1920px - 100vw) / 6);
-    --engine-board-width: max(
-      100px,
-      calc(var(--engine-card-height) - 2 * var(--engine-board-padding))
-    );
-  }
-}
-
-@media (max-width: 1600px) {
-  :root {
-    --engine-board-padding: calc((1920px - 1600px) / 6);
-    --engine-card-width: max(
-      calc(75px + 100px * var(--num-kibitzer-cards)),
-      calc(
-        var(--engine-card-info-width) + var(--engine-board-width) +
-          var(--padding)
-      )
-    );
-  }
-}
-
-@media (max-width: 1500px) {
-  :root {
-    --engine-board-padding: calc((1920px - 100vw) / 6);
-  }
-}
-
 .app {
   width: 100vw;
   height: calc(100vh);
@@ -83,11 +55,17 @@
   overflow: hidden;
   position: relative;
   display: grid;
-  grid-template-columns: 1fr var(--board-wrapper-width) var(--engine-card-width);
-  grid-template-rows: var(--topbar-height) var(--board-size) var(--graph-height);
+  grid-template-columns: auto var(--board-wrapper-width) var(
+      --engine-card-width
+    );
+  grid-template-rows: auto var(--board-size) var(--graph-height);
   gap: var(--gap);
 }
 
+.currentEvent {
+  font-size: var(--font-lg);
+  font-weight: bold;
+}
 .topBar,
 .scheduleWindow,
 .standingsWindow,
@@ -159,6 +137,24 @@
   right: var(--gap);
 }
 
+@media (max-width: 2220px) {
+  :root {
+    --font-sm: 0.8rem;
+    --font-md: 0.9rem;
+    --font-lg: 1rem;
+    --font-xl: 1.1rem;
+  }
+}
+
+@media (max-width: 1600px) {
+  :root {
+    --font-sm: 0.8rem;
+    --font-md: 0.85rem;
+    --font-lg: 0.9rem;
+    --font-xl: 0.95rem;
+  }
+}
+
 @media (max-width: 1400px) {
   :root {
     --graph-height: 20rem;
@@ -168,7 +164,7 @@
   .app {
     grid-template-columns: var(--board-wrapper-width) 1fr;
     grid-template-rows:
-      var(--topbar-height) var(--board-size)
+      auto var(--board-size)
       400px fit-content fit-content;
     height: auto;
     overflow-y: auto;
@@ -220,7 +216,7 @@
   .app {
     grid-template-columns: calc(var(--board-size) + var(--movelist-width)) 1fr;
     grid-template-rows:
-      var(--topbar-height) var(--board-size) calc(var(--graph-height) - 6rem)
+      auto var(--board-size) calc(var(--graph-height) - 6rem)
       fit-content fit-content;
     height: auto;
     overflow-y: auto;
@@ -228,6 +224,12 @@
 
   .topBar {
     grid-column: 1 / 3;
+    flex-direction: column;
+    align-items: flex-start;
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 0.5rem;
+    padding: 0.75rem var(--gap);
   }
 
   .boardWindow {
@@ -287,16 +289,6 @@
     gap: 0.5rem;
   }
 
-  .topBar {
-    grid-column: 1 / 2;
-    flex-direction: column;
-    align-items: flex-start;
-    display: grid;
-    grid-template-rows: auto auto;
-    gap: 0.5rem;
-    padding: 0.75rem var(--gap);
-  }
-
   .engineWindow {
     grid-column: 3 / 4;
     grid-row: 2 / 4;
@@ -333,6 +325,12 @@
     grid-column: 1 / 2;
     width: var(--board-size);
     grid-row: 5;
+  }
+
+  .topBar {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    width: 100%;
   }
 
   .standingsWindow {
